<resources>
    <string name="app_name">Off</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="welcome_text">Welcome to Off</string>
    <string name="slogan_text">Your personal shopping companion!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="logo_description">This is Offs official logo.</string>
    <string name="error_title">Oops!</string>
    <string name="error_ok_button_text">OK</string>
    <string name="empty_field_error_message">Make sure that all fields are filled in!</string>
    <string name="account_label">Already have an account?</string>
    <string name="login_label">LOG IN!</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="welcome_back_text">Welcome back!</string>
    <string name="login_button_label">LOG IN</string>
    <string name="title_activity_search">Search</string>
    <string name="action_logout_title">Log out</string>
    <string name="action_search_title">Search</string>
    <string name="action_user_title">User</string>
    <string name="action_location_title">Location</string>
    <string name="list_empty_text">No data to display! Pull to refresh.</string>
    <string name="action_notifications_title">Notifications</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_temp_add">Add Offer</string>
    <string name="title_activity_grid_test">GridTest</string>
    <string name="empty_grid_text">Loading data…</string>
    <string name="title_activity_show_item">ShowItemActivity</string>
    <string name="search_menu">Search</string>
    <string name="mall_out_of_range">Mall out of range</string>
    <string name="title_activity_mall_offers">Mall Offers</string>
    <string name="add_offer">Add offer</string>
    <string name="empty_available_in">Available in: —</string>
    <string name="heart_imageView_description">ImageView containing the favorite(heart) icon</string>
    <string name="empty_starts_date">Starts: —/—/----</string>
    <string name="empty_ends_date">Ends: —/—/----</string>
    <string name="progress_comment">Posting…</string>
    <string name="title_activity_comments">Comments</string>
    <string name="comments_list_empty">Loading comments…</string>
    <string name="show_more">SHOW MORE</string>
    <string name="comment_edit_text_holder">Write a comment…</string>
    <string name="from_date_hint">From Date</string>
    <string name="to_date_hint">To Date</string>
    <string name="post_menu_item">POST</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="from_percentage_hint">From percentage</string>
    <string name="to_percentage_hint">To percentage(optional)</string>
    <string name="description_hint">Description</string>
    <string name="mall_hint">Mall</string>
    <string name="store_hint">Store</string>
    <string name="title_hint">Title</string>
    <string name="tags_hint">Tags (Categories)</string>
    <string name="add_button_text">ADD</string>
    <string name="title_activity_mall">Mall</string>
    <string name="about_text_view">About</string>
    <string name="offers_text_view">Offers</string>
    <string name="map_text_view">Mall Map</string>
    <string name="contact_text_view">Contact</string>
    <string name="mark_map_button_text">Mark Map</string>
    <string name="map_image_description">Image showing the mall\'s map</string>
    <string name="title_activity_store">Store</string>
    <string name="follow_text">Follow</string>
    <string name="title_activity_store_offers">Store Offers</string>
    <string name="offer_available_text">Offer Available</string>
    <string name="offers_available_text">Offers Available</string>
    <string name="following_text">Following</string>
    <string name="top_offers_title">Top Offers</string>
    <string name="title_activity_search_results">Results</string>
    <string name="username_email_hint">Username or Email</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="birth_date_hint">Birth Date</string>
    <string name="username_hint">Username</string>
    <string name="age_hint">Age</string>
</resources>
