<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.offapps.off.UI.AddOfferActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint="@string/title_hint"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/storeEditText"
                android:hint="@string/store_hint"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mallEditText"
                android:hint="@string/mall_hint"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionEditText"
                android:hint="@string/description_hint"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainPercentageEditText"
                    android:inputType="numberDecimal"
                    android:ems="4"
                    android:layout_weight="1"
                    android:hint="@string/from_percentage_hint"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/secondaryPercentageEditText"
                    android:inputType="numberDecimal"
                    android:ems="4"
                    android:layout_weight="1"
                    android:hint="@string/to_percentage_hint"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/startDateEditText"
                    android:hint="@string/from_date_hint"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/endDateEditText"
                    android:hint="@string/to_date_hint"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/startTimeEditText"
                    android:hint="@string/start_time_hint"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/endTimeEditText"
                    android:hint="@string/end_time_hint"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tagsEditText"
                android:hint="@string/tags_hint"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"
                android:id="@+id/addButton"
                android:textColor="#2196F3"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
