<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

      <item
          android:id="@+id/action_search"
          android:orderInCategory="40"
          android:title="@string/action_search_title"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="always">

      </item>
      <item
          android:id="@+id/action_map"
          android:orderInCategory="50"
          android:title="@string/action_location_title"
          android:icon="@drawable/ic_map_white_24dp"
          app:showAsAction="always">

      </item>

    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="60"
        android:title="@string/action_notifications_title"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="always">

    </item>
</menu>
