<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.offapps.off.UI.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:ems="10"
            android:id="@+id/usernameField"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_user">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/emailField"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_layout"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_below="@id/input_layout_email">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/male_image"
            android:src="@drawable/ic_gender_male_black_24dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/female_image"
            android:src="@drawable/ic_gender_female_black_24dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_bday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ageField"
            android:hint="@string/age_hint"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="Cancel"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="Save"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>